--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <resources>
     <string name="app_name">LAB_WEEK_03</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="affogato_title">AFFOGATO</string>
+    <string name="affogato_desc">Espresso poured on a vanilla ice cream. Served in a cappuccino cup.</string>
+
+    <string name="americano_title">AMERICANO</string>
+    <string name="americano_desc">Espresso with added hot water 100-150 ml. Often served in a cappuccino cup. The espresso is added into the hot water rather than all the water being flowed through the coffee which would lead to over extraction.</string>
+
+    <string name="latte_title">CAFFE LATTE</string>
+    <string name="latte_desc">A tall mild milk coffee about 150-300 ml. Espresso with steamed milk and a little milk foam on top. Serve in a latte glass or a coffee cup. Flavored syrup can be added.</string>
+
+    <string name="coffee_list">Coffee List</string>
 </resources>
